--- a/src/app/cidade/cidades-form/cidades-form.component.html
+++ b/src/app/cidade/cidades-form/cidades-form.component.html
@@ -1,11 +1,11 @@
+<div *ngIf = 'cadastrado === true' class = "alert alert-success">{{ cidade.nome }} cadastrada</div>
 <form #cidadeForm = "ngForm" (ngSubmit) = 'create(cidadeForm)' class="form-inline">
 
-  <div *ngIf = 'cadastrado === true' class = "alert alert-success">{{ cidade.nome }} cadastrada</div>
   <fieldset >
       <div class="row ">
     <div class="form-group col-auto">
       <label for="disabledTextInput">Nome</label>
-      <input type="text" id="disabledTextInput" class="form-control" name = 'nome'  placeholder="" ngModel required minlength="3">
+      <input type="text" id="disabledTextInput" class="form-control" name = 'nome' value="" placeholder=" " ngModel required minlength="3">
     </div>
 
      <button type="submit" class="btn btn-primary" >Submit</button>
