--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,18 +2,15 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand" href="#">Navbar</a>
-  
+    <a class="navbar-brand" >Cidades</a>
+
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" routerLink = ''>Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
+          <a class="nav-link" routerLink="form">Formulario</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
@@ -24,7 +21,7 @@
   </nav>
 <div class="container">
 <br>
-<app-cidades-lista></app-cidades-lista>
+<router-outlet></router-outlet>
 
 </div>
 
