--- a/src/app/cidade/cidades-form/cidades-form.component.html
+++ b/src/app/cidade/cidades-form/cidades-form.component.html
@@ -8,7 +8,7 @@
       <input type="text" id="disabledTextInput" class="form-control" name = 'nome' value="" placeholder=" " ngModel required minlength="3">
     </div>
 
-     <button type="submit" class="btn btn-primary" >Submit</button>
+     <button type="submit" class="btn btn-primary" >Salvar</button>
 
   </div>
   </fieldset>
