--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,9 +1,5 @@
 <form #usuarioForm = "ngForm" (ngSubmit) = 'salva(usuarioForm)'>
-  {{cliente | json}}
-  <div class="alert alert-danger" *ngIf = 'usuarioForm.invalid'>
-    Prencha Todos os campos
 
-  </div>
   <fieldset >
     <div class="form-group">
       <label for="disabledTextInput">Nome</label>
@@ -11,7 +7,7 @@
     </div>
     <div class="form-group">
       <label for="disabledTextInput">Email</label>
-      <input type="email" id="disabledTextInput" class="form-control" name = 'email' placeholder="" [(ngModel)] = 'cliente.email' required email> 
+      <input type="email" id="disabledTextInput" class="form-control" name = 'email' placeholder="" [(ngModel)] = 'cliente.email' required email>
     </div>
     <div class="form-group">
       <label for="disabledSelect">Profissão</label>
@@ -20,7 +16,7 @@
         <option *ngFor = 'let profissao of profissoes'>{{profissao}}</option>
        </select>
     </div>
-    
-    <button type="submit" class="btn btn-primary" [disabled] = '!usuarioForm.valid'>Submit</button>
+
+    <button type="submit" class="btn btn-primary" [disabled] = '!usuarioForm.valid'>Enviar</button>
   </fieldset>
 </form>
